# cisco-gps-netconf

./: .gitignore  LICENSE  Makefile  README.md  SECURITY.md  cellular_data.json  cisco_gps_netconf.py  complete_cellular_data.json  example_usage.py  gps_output.json  pyproject.toml  requirements-dev.txt  requirements-standalone.txt  requirements.txt  run_cisco_gps_netconf.py
.github/workflows/: ci.yml
src/cisco_gps_netconf/: __init__.py  __main__.py  cli.py  exceptions.py  formatters.py  gps_retriever.py  netconf_filters.py  parsers.py
tests/: __init__.py  conftest.py  test_formatters.py  test_gps_retriever.py  test_parsers.py
